--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^4.33.0",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -23,6 +25,7 @@
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
+    "next13-progressbar": "^1.0.2",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,6 +37,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.5",
     "prettier": "^3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3"
   }
